--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-ytd-api",
   "description": "Unofficial YouTube Data API for Angular",
-  "version": "1.0.0-alpha.4-64a2acd",
+  "version": "1.0.0-alpha.4-18bc502",
   "license": "MIT",
   "keywords": [
     "youtube",
@@ -34,6 +34,7 @@
     "ngx-simple-http": "^1.0.0",
     "tslib": "^1.9.3"
   },
+  "schematics": "./schematics/collection.json",
   "main": "bundles/ngx-ytd-api.umd.js",
   "module": "fesm5/ngx-ytd-api.js",
   "es2015": "fesm2015/ngx-ytd-api.js",
